package ca.ulaval.glo4002.game.interfaces.rest.actions.entities;

public enum Command {
    ADD,
    ADD_DINO
}
