@startuml

title __ENTITIES's Class Diagram__\n

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace actions.entities {
        abstract class ca.ulaval.glo4002.game.interfaces.rest.actions.entities.Action {
            - id : UUID
            - object : Object
            - objectRepository : Object
            + Action()
            {abstract} + execute()
            + getId()
            + getObject()
            + getObjectRepository()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace actions.entities {
        class ca.ulaval.glo4002.game.interfaces.rest.actions.entities.ActionFactory {
            + create()
            + create()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace actions.entities {
        interface ca.ulaval.glo4002.game.interfaces.rest.actions.entities.ActionRepository {
            {abstract} + execute()
            {abstract} + getWaitingActions()
            {abstract} + reset()
            {abstract} + save()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace actions.entities {
        class ca.ulaval.glo4002.game.interfaces.rest.actions.entities.AddDino {
            + AddDino()
            + execute()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace actions.entities {
        class ca.ulaval.glo4002.game.interfaces.rest.actions.entities.AddResource {
            + AddResource()
            + execute()
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace actions.entities {
        enum Command {
          ADD
          ADD_DINO
        }
      }
    }
  }
  

  namespace ca.ulaval.glo4002.game {
    namespace interfaces.rest {
      namespace actions.entities {
        class ca.ulaval.glo4002.game.interfaces.rest.actions.entities.RetrieveAction {
            + RetrieveAction()
            + RetrieveAction()
            + execute()
        }
      }
    }
  }
  

  ca.ulaval.glo4002.game.interfaces.rest.actions.entities.AddDino -up-|> ca.ulaval.glo4002.game.interfaces.rest.actions.entities.Action
  ca.ulaval.glo4002.game.interfaces.rest.actions.entities.AddResource -up-|> ca.ulaval.glo4002.game.interfaces.rest.actions.entities.Action
  ca.ulaval.glo4002.game.interfaces.rest.actions.entities.RetrieveAction -up-|> ca.ulaval.glo4002.game.interfaces.rest.actions.entities.Action


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
